--- a/packages/eslint-config-base-preset/package.json
+++ b/packages/eslint-config-base-preset/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@tongtian/eslint-base-preset",
+  "name": "@tongtian/eslint-config-base-preset",
   "version": "1.3.0",
   "description": "eslint 通用基础配置",
   "keywords": [],
   "author": "吴震宇 <wu.zhenyu@darcytech.com>",
   "license": "MIT",
-  "main": "lib/eslint-base-preset.js",
+  "main": "lib/eslint-config-base-preset.js",
   "directories": {
     "lib": "lib"
   },
