--- a/packages/babel-preset/package.json
+++ b/packages/babel-preset/package.json
@@ -33,7 +33,6 @@
   "homepage": "https://github.com/noshower/frontend-presets#readme",
   "dependencies": {
     "@babel/core": "^7.14.0",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-decorators": "^7.13.15",
     "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/preset-env": "^7.14.0",
@@ -45,7 +44,6 @@
   },
   "peerDependencies": {
     "@babel/core": "^7.14.0",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-decorators": "^7.13.15",
     "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/preset-env": "^7.14.0",
@@ -53,7 +51,6 @@
     "@babel/preset-typescript": "^7.13.0",
     "@babel/runtime": "^7.13.17",
     "@babel/runtime-corejs3": "^7.13.17",
-    "core-js": "^3.11.0",
-    "typescript": "^4.2.4"
+    "core-js": "^3.11.0"
   }
 }
