--- a/packages/eslint-config-base-preset/package.json
+++ b/packages/eslint-config-base-preset/package.json
@@ -34,10 +34,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.3.6",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-prettier": "^3.4.0"
   },
   "gitHead": "d434c09182bc9baf4e373720504a21783de480da"
 }
