--- a/packages/eslint-config-base-preset/package.json
+++ b/packages/eslint-config-base-preset/package.json
@@ -2,7 +2,24 @@
   "name": "@tongtian/eslint-config-base-preset",
   "version": "1.1.4",
   "description": "eslint 通用基础配置",
-  "keywords": [],
+  "keywords": [
+    "airbnb",
+    "config",
+    "eslint",
+    "es2015",
+    "es2016",
+    "es2017",
+    "es2018",
+    "es2019",
+    "es2020",
+    "es2021",
+    "eslintconfig",
+    "javascript",
+    "typescript",
+    "prettier",
+    "jest",
+    "@typescript-eslint"
+  ],
   "author": "吴震宇 <wu.zhenyu@darcytech.com>",
   "license": "MIT",
   "main": "lib/eslint-config-base-preset.js",
