docs(eslint-config-preset): 增加package.json文件的keywords

--- a/packages/eslint-config-preset/package.json
+++ b/packages/eslint-config-preset/package.json
@@ -3,9 +3,24 @@
   "version": "1.1.6",
   "description": "eslint 通用配置",
   "keywords": [
+    "airbnb",
+    "config",
     "eslint",
+    "es2015",
+    "es2016",
+    "es2017",
+    "es2018",
+    "es2019",
+    "es2020",
+    "es2021",
+    "eslintconfig",
+    "javascript",
     "typescript",
-    "react"
+    "prettier",
+    "jest",
+    "@typescript-eslint",
+    "react",
+    "react-hooks"
   ],
   "author": "吴震宇 <wu.zhenyu@darcytech.com>",
   "license": "MIT",
