--- a/packages/stylelint-preset/package.json
+++ b/packages/stylelint-preset/package.json
@@ -2,13 +2,21 @@
   "name": "@tongtian/stylelint-preset",
   "version": "1.1.1",
   "description": "整合通用的stylelint规则",
-  "keywords": [],
-  "author": "吴震宇 <wu.zhenyu@darcytech.com>",
-  "license": "ISC",
+  "keywords": [
+    "stylelint",
+    "prettier",
+    "stylelint-config",
+    "recess-order",
+    "use-variable",
+    "scss",
+    "less",
+    "css"
+  ],
+  "author": "noshower",
+  "license": "MIT",
   "main": "lib/stylelint-preset.js",
   "directories": {
-    "lib": "lib",
-    "test": "__tests__"
+    "lib": "lib"
   },
   "files": [
     "lib"
