chore(prettier-preset): 修改package.json文件的author

--- a/packages/prettier-preset/package.json
+++ b/packages/prettier-preset/package.json
@@ -5,7 +5,7 @@
   "keywords": [
     "prettier"
   ],
-  "author": "吴震宇 <wu.zhenyu@darcytech.com>",
+  "author": "noshower",
   "license": "MIT",
   "main": "lib/prettier-preset.js",
   "directories": {
