chore(eslint-config-preset): 修改package.json文件的author

--- a/packages/eslint-config-preset/package.json
+++ b/packages/eslint-config-preset/package.json
@@ -22,7 +22,7 @@
     "react",
     "react-hooks"
   ],
-  "author": "吴震宇 <wu.zhenyu@darcytech.com>",
+  "author": "noshower",
   "license": "MIT",
   "main": "lib/eslint-config-preset.js",
   "directories": {
