chore(babel-preset): 修改package.json的author

--- a/packages/babel-preset/package.json
+++ b/packages/babel-preset/package.json
@@ -8,7 +8,7 @@
     "react",
     "typescript"
   ],
-  "author": "吴震宇 <wu.zhenyu@darcytech.com>",
+  "author": "noshower",
   "license": "MIT",
   "main": "lib/babel-preset.js",
   "directories": {
