fix(jest-config-preset): 修复fileMock.js文件没有上传和路径不对的问题

--- a/packages/jest-config-preset/package.json
+++ b/packages/jest-config-preset/package.json
@@ -12,6 +12,12 @@
     "jest-watch-typeahead"
   ],
   "author": "noshower",
+  "directories": {
+    "lib": "lib"
+  },
+  "files": [
+    "lib"
+  ],
   "license": "MIT",
   "main": "jest-preset.js",
   "repository": {
